external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_mut_usage_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04016]: too few arguments
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:10:10
   │
10 │          Option::Other { mut x: mut y } => y,
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing pattern for field 'x' in '0x42::m::Option::Other'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:10:26
   │
10 │          Option::Other { mut x: mut y } => y,
   │                          ^^^ 'mut' modifier can only be used on variable bindings

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:10:44
   │
 8 │     public fun weird_is_some(o: Option<bool>): bool {
   │                              - Similarly named defintion found here
 9 │        match (o) {
10 │          Option::Other { mut x: mut y } => y,
   │                                            ^
   │                                            │
   │                                            Unbound variable 'y'
   │                                            Did you mean: 'o'

error[E02010]: invalid name
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:11:33
   │
11 │          Option::Other { x: mut y<u64> } => y,
   │                                 ^ Invalid type arguments on a pattern variable
   │
   = Type arguments cannot appear on pattern variables

error[E04016]: too few arguments
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:12:10
   │
12 │          Option::Other { mut x: y } => y,
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing pattern for field 'x' in '0x42::m::Option::Other'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:12:26
   │
12 │          Option::Other { mut x: y } => y,
   │                          ^^^ 'mut' modifier can only be used on variable bindings

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:12:40
   │
 8 │     public fun weird_is_some(o: Option<bool>): bool {
   │                              - Similarly named defintion found here
   ·
12 │          Option::Other { mut x: y } => y,
   │                                        ^
   │                                        │
   │                                        Unbound variable 'y'
   │                                        Did you mean: 'o'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:13:15
   │
13 │          _x @ mut Option::Some(true) => true,
   │               ^^^ Invalid 'mut' keyword on non-variable pattern

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:14:15
   │
14 │          _x @ mut Option::Some(false) => false,
   │               ^^^ Invalid 'mut' keyword on non-variable pattern

error[E02010]: invalid name
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:15:10
   │
15 │          mut Option::None => false,
   │          ^^^ ------------ Expected a valid 'enum' variant, 'struct', or 'const', not a variable
   │          │    
   │          'mut' can only be used with variable bindings in patterns
